# actichat

./: .gitignore  DockerFile  Procfile  README.md  app.py  captain-definition  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
src/: socket_server.py  web_server.py
static/: messages.js  style.css
templates/: base.html  chat.html  create.html  index.html  join.html
templates/partials/: chat_top.html  navbar.html
tests/load/: artillery-quick.yml  artillery.yml
