[tool.poetry]
name = "actichat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bidict = "0.22.1"
blinker = "1.9.0"
click = "8.1.8"
dnspython = "2.7.0"
eventlet = "0.40.4"
flask = "3.1.2"
flask-socketio = "5.6.0"
greenlet = "3.2.4"
gunicorn = "23.0.0"
h11 = "0.16.0"
importlib-metadata = "8.7.1"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
markupsafe = "3.0.3"
python-engineio = "4.13.0"
python-socketio = "5.16.0"
simple-websocket = "1.1.0"
werkzeug = "3.1.5"
wsproto = "1.2.0"
zipp = "3.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app:main"
